# Django_coursework

./: pyproject.toml
Service_development/: apps.py  models.py  urls.py  views.py
Service_development/templates/Service_development/: client_list.html  create_client.html  create_mailing_list.html  send_message.html  view_client.html  view_mailing_list.html  view_mailing_logs.html
config/config/: settings.py  urls.py
